camila-orchestration/int/k8s/API/camila-product-api.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: camila-product-api-ns
spec: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camila-product-api
  name: camila-product-api
  namespace: camila-product-api-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: camila-product-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  minReadySeconds: 0
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: camila-product-api
    spec:
      containers:
      - image: docker.io/library/camila-product-api:1.0.0
        name: camila-product-api
        resources:
          limits:
            cpu: "2"
            memory: 1024Mi
          requests:
            cpu: "1"
            memory: 1024Mi
        imagePullPolicy: Never
        ports:
        - name: api-port
          containerPort: 8080
          protocol: TCP
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
        startupProbe:
          httpGet:
            path: /product-int/api/actuator/health
            port: api-port
          initialDelaySeconds: 5
        readinessProbe:
          httpGet:
            path: /product-int/api/actuator/health/readiness
            port: api-port
          initialDelaySeconds: 5
        livenessProbe:
          httpGet:
            path: /product-int/api/actuator/health/liveness
            port: api-port
          initialDelaySeconds: 10
          periodSeconds: 30
        volumeMounts:
        - name: "camila-product-api-data-dir"
          mountPath: "/tmp"
      volumes:
      - name: "camila-product-api-data-dir"
        persistentVolumeClaim:
          claimName: "camila-product-api-data"
          readOnly: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camila-product-api
  name: camila-product-api-nodeport-svc
  namespace: camila-product-api-ns
spec:
  ports:
  - name: api-port
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30080
  - name: jmx-port
    port: 5005
    protocol: TCP
    targetPort: 5005
    nodePort: 30005
  selector:
    app: camila-product-api
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camila-product-api-ingress
  namespace: camila-product-api-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /product-int/api/
        backend:
          service:
            name: camila-product-api-nodeport-svc
            port:
              number: 30080
